--- a/views/dashboard/region.pug
+++ b/views/dashboard/region.pug
@@ -1,111 +1,142 @@
 extends ../layout
 
+block head
+	script(type='text/javascript', src='/js/libs.client.js')
+	script(type='text/javascript', src='/js/app.js')
+
+block navright
+	if pdata.componentGroups
+		button
+			span
+				i.fa.fa-bell
+				= t('actions.subscribe')
+
 block header
-	if pdata.comps
+	if pdata.componentGroups
 		nav
 			ul
-				each compgroup in pdata.comps
+				each compgroup in pdata.componentGroups
 					li
 						span= compgroup.shortName
-						i.fa.fa-check.status-ok
+						+stateicon(compgroup.state)
+	else
+		nav
+			ul
+				li No components have been setup yet.
 
 block content
 	.dashboard
-		.grid-2_sm-1
+		.grid-3_lg-2_sm-1
 			.col
 				section
 					h2
 						i.fa.fa-check-circle 
-						| Overview
-					.box
-						if pdata.comps
+						= t('headers.overview')
+					if pdata.componentGroups
+						.box
 							ul.status-list
-								each compgroup in pdata.comps
+								each compgroup in pdata.componentGroups
 									li
-										h3
+										h3(class='status-' + compgroup.state)
 											span= compgroup.name
-											i.fa.fa-check
+											+stateicon(compgroup.state)
 										ul.components-list
 											each comp in compgroup.components
 												li
 													span
 														strong= comp.name
 														span= comp.description
-													span
-														strong OK
-														i.fa.fa-check
-			.col
+													span(class='status-' + comp.state)
+														strong= t('states.' + comp.state)
+														+stateicon(comp.state)
+					else
+						.box.no-content No components have been setup yet.
+			.col.mid
 				section
 					h2
 						i.fa.fa-bullhorn
-						| Incidents
-					.box
-						ul.incidents-list
-							li
-								h3.status-perfissues
-									span WAN intermittent packet loss
-									i.fa.fa-minus-square
-								ul.incident-properties
+						= t('headers.incidents')
+					if pdata.incidents.active.length > 0
+						.box
+							ul.incidents-list
+								each inc in pdata.incidents.active
 									li
-										strong Component:
-										span Network - WAN
-									li
-										strong Severity:
-										span Performance Issues
-									li
-										strong Logged on:
-										span Jun 29, 15:10 UTC
-									li
-										strong Affected Regions:
-										span
-											a(href='/region/canada') Canada
-											| , 
-											a(href='/canada') USA
-											|  and 
-											a(href='/canada') UK
-								ul.updates-list
-									li
-										strong Update
-										span We are working with our internet provider to resolve this issue.
-										em Jun 29, 15:14 UTC
-									li
-										strong Identified
-										span We are currently experiencing intermittent packet loss on the WAN.
-										em Jun 29, 15:10 UTC
-							li
-								h3.status-majordown
-									span WAN intermittent packet loss
-									i.fa.fa-circle
-								ul.incident-properties
-									li
-										strong Component:
-										span Network - WAN
-									li
-										strong Severity:
-										span Performance Issues
-									li
-										strong Logged on:
-										span Jun 29, 15:10 UTC
-									li
-										strong Affected Regions:
-										span
-											a(href='/canada') Canada
-											| , 
-											a(href='/canada') USA
-											|  and 
-											a(href='/canada') UK
-								ul.updates-list
-									li
-										strong Update
-										span We are working with our internet provider to resolve this issue.
-										em Jun 29, 15:14 UTC
-									li
-										strong Identified
-										span We are currently experiencing intermittent packet loss on the WAN.
-										em Jun 29, 15:10 UTC
+										h3(class='status-' + inc.state)
+											span= inc.summary
+											+stateicon(inc.state)
+										ul.incident-properties
+											li
+												- var comp = pdata.components[inc.component]
+												strong Component:
+												span= comp.name + ' - ' + comp.group.name
+											li
+												strong Severity:
+												span= t('states.' + inc.state)
+											li
+												strong Affected Regions:
+												span
+													each reg, idx in inc.regions
+														if idx > 0 && idx < inc.regions.length - 1
+															| , 
+														else if idx > 0 && idx >= inc.regions.length - 1
+															= ' ' + t('dashboard.affectedRegionsAnd') + ' '
+														a(href='/region/' + reg._id)= reg.name
+
+										ul.updates-list
+											each upd in inc.updates
+												li
+													div!= upd.contentHTML
+													span
+														strong= t('updateStates.' + upd.status)
+														em= moment.tz(upd.postedDate, 'UTC').format('lll z')
+					else
+						.box.no-content No active incidents.
 				section
 					h2
 						i.fa.fa-history
-						| Past Incidents
-					.box.no-content
-						| No recent past incidents
+						= t('headers.pastincidents')
+					if pdata.incidents.recent.length > 0
+						.box
+							ul.incidents-list
+								each inc in pdata.incidents.recent
+									li
+										h3(class='status-' + inc.state)
+											span= inc.summary
+											+stateicon(inc.state)
+										ul.incident-properties
+											li
+												- var comp = pdata.components[inc.component]
+												strong Component:
+												span= comp.name + ' - ' + comp.group.name
+											li
+												strong Severity:
+												span= t('states.' + inc.state)
+											li
+												strong Affected Regions:
+												span
+													each reg, idx in inc.regions
+														if idx > 0 && idx < inc.regions.length - 1
+															| , 
+														else if idx > 0 && idx >= inc.regions.length - 1
+															= ' ' + t('dashboard.affectedRegionsAnd') + ' '
+														a(href='/region/' + reg._id)= reg.name
+
+										ul.updates-list.past
+											each upd in inc.updates
+												li
+													!= upd.contentHTML
+													span
+														strong= t('updateStates.' + upd.status)
+														em= moment.tz(upd.postedDate, 'UTC').format('lll z')
+										.updates-list-more
+											i.fa.fa-chevron-down
+											i.fa.fa-chevron-up
+					else
+						.box.no-content
+							| No recent past incidents.
+			.col
+				section
+					h2
+						i.fa.fa-line-chart
+						= t('headers.uptime')
+					.box.no-content No metrics have been setup yet.
