--- a/views/admin/settings.pug
+++ b/views/admin/settings.pug
@@ -10,7 +10,7 @@ block admin-content
 			section
 				label Display Layout
 				input#layout_full(name='layout', type='radio', v-model='type', value='full', checked)
-				label(for='layout_full') Full
+				label(for='layout_full') Full <em>(default)</em>
 				input#layout_condensed(name='layout', type='radio', v-model='type', value='condensed')
 				label(for='layout_condensed') Condensed
 				input#layout_minimal(name='layout', type='radio', v-model='type', value='minimal')
@@ -25,6 +25,14 @@ block admin-content
 				+dropdown('incident-timezone', 'timezone', 'UTC')(placeholder='UTC')
 					each tz in moment.tz.names()
 						+dropdownitem(tz, tz, 'clock-o', 'blue-grey', moment().tz(tz).format('Z z'))
+			section
+				label Incidents Display
+				div
+					input(id='incidents_active_collapsed', type='checkbox', v-model='incidents_active_collapsed', value='yes')
+					label(for='incidents_active_collapsed') Active Incidents should be collapsable. <em>Default: no</em>
+				div
+					input(id='incidents_past_collapsed', type='checkbox', v-model='incidents_past_collapsed', value='yes')
+					label(for='incidents_past_collapsed') Past Incidents should be collapsable. <em>Default: yes</em>
 			section.form-footer
 				button.btn.btn-green#admin-settings-save
 					span
