--- a/client/css/sections/_dashboard.scss
+++ b/client/css/sections/_dashboard.scss
@@ -29,6 +29,7 @@
 			color: material-color('grey','700');
 			font-weight: 400;
 			font-size: 18px;
+			text-shadow: 1px 1px 0 #FFF;
 			margin: 0 0 10px 0;
 			text-align: center;
 
@@ -57,3 +58,4 @@
 	}
 
 }
+
