--- a/views/dashboard/region.pug
+++ b/views/dashboard/region.pug
@@ -23,6 +23,15 @@ block header
 		nav
 			ul
 				li No components have been setup yet.
+	
+	.sub-header
+		span
+			button
+				span
+					i.fa.fa-bell
+					= t('actions.subscribe')
+		h1= pdata.region.name
+		span
 
 block content
 	.dashboard
