--- a/client/css/layout/_header.scss
+++ b/client/css/layout/_header.scss
@@ -114,6 +114,26 @@ header {
 
 	}
 
+	.sub-header {
+		display: flex;
+		background-color: material-color('light-blue', '800');
+		justify-content: space-between;
+		align-items: center;
+		border-top: 1px solid #FFF;
+		box-shadow: inset 0 1px 3px rgba(0,0,0,0.05);
+		height: 50px;
+
+		> h1 {
+			margin: 0;
+			padding: 0;
+			font-size: 24px;
+			font-weight: 300;
+			color: #FFF;
+			letter-spacing: 1px;
+		}
+
+	}
+
 }
 
 #notifload {
