--- a/client/css/components/_incidents-list.scss
+++ b/client/css/components/_incidents-list.scss
@@ -47,7 +47,7 @@
 }
 
 .incident-properties {
-	background-color: lighten(material-color('blue-grey','50'), 3%);
+	@include status-colors('background-color', 50);
 	box-shadow:	0 1px 1px rgba(0,0,0,0.15);
 	border: 1px solid #FFF;
 	margin: 0;
@@ -82,9 +82,11 @@
 
 	> li {
 		box-shadow:	0 1px 1px rgba(0,0,0,0.15);
+		display: none;
 
 		&:first-child {
 			border-top: none;
+			display: block;
 		}
 
 		> div {
@@ -155,32 +157,14 @@
 
 	}
 
-	&.past {
-
-		> li {
-			display: none;
-
-			&:first-child {
-				display: block;
-			}
-
-		}
-
-	}
-
 }
 
 .updates-list-more {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 30px;
-	font-size: 12px;
-	background-color: lighten(material-color('blue-grey','50'), 3%);
-	border-bottom: 1px solid material-color('blue-grey','100');
+	display: block;
+	background-color: material-color('blue-grey','50'); 
+	border-bottom: 1px solid lighten(material-color('blue-grey','50'), 3%);
 	color: material-color('blue-grey','300');
-	padding-top: 10px;
-	cursor: pointer;
+	height: 10px;
 	box-shadow:
 		inset 0 1px 1px rgba(0,0,0,0.15),
 		inset 0 9px 0 -5px lighten(material-color('blue-grey','50'), 5%),
@@ -188,20 +172,38 @@
 		inset 0 18px 0 -10px lighten(material-color('blue-grey','50'), 4%),
 		inset 0 18px 1px -9px rgba(0,0,0,0.15);
 
+	&.reverse {
+		display: none;
+	}
+
+}
+
+.updates-list-morebtn {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 12px;
+	background-color: lighten(material-color('blue-grey','50'), 3%);
+	background-image: linear-gradient( to bottom, lighten(material-color('blue-grey','50'), 3%), #FFF);   
+	border-left:1px solid #FFF;
+	border-right:1px solid #FFF;
+	border-bottom: 1px solid lighten(material-color('blue-grey','100'), 10%);
+	box-shadow: 0px 2px 0px rgba(255,255,255,1), 0px 1px 1px rgba(0,0,0,.15);
+	color: material-color('blue-grey','300');
+	padding: 5px 0;
+	cursor: pointer;
+
 	.fa:last-child {
 		display: none;
 	}
 
 	&.reverse {
-		box-shadow: none;
-
 		.fa:first-child {
 			display: none;
 		}
 		.fa:last-child {
 			display: inline;
 		}
-
 	}
 
 }
