Fixed social auth user creation

--- a/views/admin/settings.pug
+++ b/views/admin/settings.pug
@@ -34,10 +34,10 @@ block admin-content
 				label Incidents Display
 				div
 					input(id='incidents_active_collapsed', type='checkbox', v-model='incidents_active_collapsed', value='yes')
-					label(for='incidents_active_collapsed') Active Incidents should be collapsable. <em>Default: no</em>
+					label(for='incidents_active_collapsed') Active Incidents should be collapsible. <em>Default: no</em>
 				div
 					input(id='incidents_past_collapsed', type='checkbox', v-model='incidents_past_collapsed', value='yes')
-					label(for='incidents_past_collapsed') Past Incidents should be collapsable. <em>Default: yes</em>
+					label(for='incidents_past_collapsed') Past Incidents should be collapsible. <em>Default: yes</em>
 			section.form-footer
 				button.btn.btn-green#admin-settings-save
 					span
