--- a/client/css/components/_status-list.scss
+++ b/client/css/components/_status-list.scss
@@ -13,6 +13,7 @@
 		h3 {
 			background-color: material-color('green','600');
 			border-bottom: 4px solid material-color('green','300');
+			box-shadow: 0px 2px 5px 0px transparentize(material-color('green', '700'), 0.7);
 			color: #FFF;
 			margin: 0;
 			padding: 5px 15px;
