--- a/client/css/sections/_dashboard.scss
+++ b/client/css/sections/_dashboard.scss
@@ -1,24 +1,32 @@
 
 .dashboard {
 	padding: 25px;
+	max-width: 80%;
+  margin-right: auto;
+  margin-left: auto;
 
 	.col, [class*=col-] {
-		padding: 0 1rem 1rem;
+		padding: 0 2rem 1rem;
 	}
 
-	.col.mid {
+	.col.alt {
 		border-left: 2px dotted material-color('grey','300');
-		border-right: 2px dotted material-color('grey','300');
+	}
+
+	@media screen and (max-width: 110em) {
+		& {
+			max-width: 90%;
+		}
 	}
 
 	@media screen and (max-width: 80em) {
-		.col.mid {
-			border-right: none;
+		& {
+			max-width: 100%;
 		}
 	}
 
 	@media screen and (max-width: 48em) {
-		.col.mid {
+		.col.alt {
 			border-left: none;
 		}
 	}
