--- a/client/css/components/_incidents-list.scss
+++ b/client/css/components/_incidents-list.scss
@@ -75,6 +75,58 @@
 
 }
 
+.incident-schedule {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	display: flex;
+	border: 1px solid #FFF;
+	border-top: none;
+	box-shadow:	0 1px 1px rgba(0,0,0,0.15);
+
+	> li {
+		display: flex;
+		align-items: center;
+		flex: 1 1 auto;
+		padding: 0 15px 0 30px;
+		height: 34px;
+		background-color: lighten(material-color('blue','100'), 5%);
+		font-size: 12px;
+		font-weight: 500;
+		color: desaturate(material-color('blue','800'), 35%);
+		text-shadow: 1px 1px 0 rgba(255,255,255,0.7);
+
+		&:first-child {
+			background-color: material-color('blue','100');
+			position: relative;
+			padding-left: 15px;
+			flex-basis: 24%;
+
+			&::before {
+				position: absolute;
+				right: 0;
+				content: "";
+				transform: translateY(-50%) translateX(50%) rotate(-45deg);
+				border-right: 1px solid #FFF;
+				border-bottom: 1px solid #FFF;
+				background-color: inherit;
+				width: 2em;
+				height: 2em;
+				top: 50%;
+			}
+
+		}
+
+		> span {
+			display: inline-block;
+			margin-right: 8px;
+			color: material-color('blue','800');
+		}
+
+	}
+
+}
+
 .updates-list {
 	padding: 0;
 	margin: 0;
