--- a/views/admin/users-edit.pug
+++ b/views/admin/users-edit.pug
@@ -1,52 +1,52 @@
 extends ./layout
 
-block admin-header
-	i.fa.fa-users
-	| #{t('admin.sections.users')} - #{usr.name}
-
-block admin-actions
-	a.btn.btn-indigo(href='/admin/users')
-		span
-			i.fa.fa-arrow-left
-			= t('actions.backToList')
-
 block admin-content
 	#admin-users-edit
-		.admin-form
+		.hero
+			h1.title= t('admin.sections.users')
+			h2.subtitle= usr.name
+			ul.hero-menu
+				li
+					a.is-grey(href='/admin/users')
+						i.icon-reply
+						span= t('actions.backToList')
+		.form-sections
 				section
-					label= t('admin.users.name')
-					input#user-name(type='text', placeholder=t('admin.users.name_placeholder'), v-model='name')
+					label.label= t('admin.users.name')
+					p.control.is-fullwidth
+						input#user-name(type='text', placeholder=t('admin.users.name_placeholder'), v-model='name')
 				section
-					label= t('admin.users.email')
-					input(type='text', placeholder=t('admin.users.email_placeholder'), v-model='email', disabled=(usr.provider !== 'local'))
+					label.label= t('admin.users.email')
+					p.control.is-fullwidth
+						input(type='text', placeholder=t('admin.users.email_placeholder'), v-model='email', disabled=(usr.provider !== 'local'))
 				if usr.provider === 'local'
 					section
-						label= t('admin.users.password')
-						input(type='text', v-model='password', value='********')
+						label.label= t('admin.users.password')
+						p.control
+							input(type='text', v-model='password', value='********')
 				section
-					.grid
-						.col
-							label= t('admin.users.timezone')
+					.columns
+						.column
+							label.label= t('admin.users.timezone')
 							+dropdown('timezone', 'timezone', usr.timezone)(placeholder=usr.timezone)
 								each tz in moment.tz.names()
 									+dropdownitem(tz, tz, 'clock-o', 'blue-grey', moment().tz(tz).format('Z z'))
-						.col
-							label= t('admin.users.displayLanguage')
+						.column
+							label.label= t('admin.users.displayLanguage')
 							+dropdown('language', 'lang', usr.lang)(placeholder=appdata.lang[usr.lang])
 								each langName, langKey in appdata.lang
 									+dropdownitem(langName, langKey, 'language', 'blue-grey')
 				if user.id !== usr.id
 					section
-						label= t('admin.users.rights')
+						label.label= t('admin.users.rights')
 						each rText,rKey in appdata.rights
 							div
 								input(id='right-' + rKey, type='checkbox', v-model='rights', value=rKey)
 								label(for='right-' + rKey)= rText
 				section.form-footer
-					button.btn.btn-green#admin-users-save
-						span
-							i.fa.fa-check
-							= t('actions.saveChanges')
+					button.button.is-green#admin-users-save
+						i.icon-check
+						span= t('actions.saveChanges')
 
 	script(type='text/javascript').
 		var usrData = !{JSON.stringify(usr)};
